--- a/_posts/2018-08-03-zine.md
+++ b/_posts/2018-08-03-zine.md
@@ -38,7 +38,6 @@ I would like to stress once more that this is for those who are not familiar wit
 I referred to several online tutorials, the book *Handmade Electronic Music* by Nicolas collins, and the resources of the workshop *Electricity Matters* by Nataliya.
 
 <br>
-#### Upcoming plan
-I'm planning to make a separate webpage which will be a repository of tutorials and reference for handmade electronics. It will be updated soon!
+Go to [Handmade Electronics](http://lucid2713.github.io/handmade-electronics/) , where I continue to upload tutorials and reference for making handmade electronics.
 
 <br><br>
