--- a/_posts/2018-08-03-zine.md
+++ b/_posts/2018-08-03-zine.md
@@ -38,6 +38,6 @@ I would like to stress once more that this is for those who are not familiar wit
 I referred to several online tutorials, the book *Handmade Electronic Music* by Nicolas collins, and the resources of the workshop *Electricity Matters* by Nataliya.
 
 <br>
-Go to [Handmade Electronics](http://lucid2713.github.io/handmade-electronics/). I will continue to upload tutorials and reference for making handmade electronics on this webpage.
+Go to [Handmade Electronic Art](http://handmade-electronic-art.com/). I will continue to upload tutorials and reference for making handmade electronics on this webpage.
 
 <br><br>
