edit grammer errors and update new posts

--- a/_posts/2018-08-03-zine.md
+++ b/_posts/2018-08-03-zine.md
@@ -7,24 +7,24 @@ categories: [work]
 
 ---
 
-I made a zine for analog oscillator about how to make with schematics and needed elements for those who are beginner and don't know well about circuit making.
+I made a zine for analog oscillator about how to make with schematics and needed elements for those who are a beginner and don't know well about circuit making.
 
 ![zine, gif]({{ site.url }}/img/zine.gif){: width="800px"}
 <br><br>
 
-It started from my personal experience that I'm not very technical person even though I usually work with technology and electronics. I always struggled from very subtle problems associated to basic knowledge of dealing with electronics when I worked with circuits. So I need double times than others to follow tutorials and to understand how the system works. But now as I keep working, I become slowly more confident and enjoy to make.
+It started from my personal experience that I'm not a very technical person even though I usually work with technology and electronics. I always struggled from very subtle problems associated with basic knowledge of dealing with electronics when I worked with circuits. So I need double times than others to follow tutorials and to understand how the system works. But now as I keep working, I become slowly more confident and enjoy to make.
 
-Several weeks ago, two of my friends in Rotterdam who work at [WORM](https://worm.org/) as volunteers, called me to help them make analog synthesizer from the beginning. They were very enthusiastic about handmade electronic instruments but haven't tried before.
-As I've never guided someone before with circuit making although I played with a lot during last semester, I don't think I could help them very well at the moment. So after that day feeling inadequate of myself, but really wished to be helpful for them, I've been thinking of what I can do in case of possible next chances to help and guide people in making electronics.
+Several weeks ago, two of my friends in Rotterdam who work at [WORM](https://worm.org/) as volunteers, called me to help them make an analog synthesizer from the beginning. They were very enthusiastic about handmade electronic instruments but haven't tried before.
+As I've never guided someone before with circuit making although I played with a lot during last semester, I don't think I could help them very well at the moment. So after that day feeling inadequate of myself, but wished to be helpful for them, I've been thinking of what I can do in case of possible next chances to help and guide people in making electronics.
 
-For those who don't have many experience with electronics and basic knowledge about engineering, like as myself, it's a bit hard to really get into all the tiny elements, confusing schematics and invisible flow of electricity.
-Considering making electronics by hands as a play as well as an work of art, not as an engineering work, I think understanding the whole process and the process of making itself should be a bit different from the normal way of engineering.
+For those who don't have much experience with electronics and basic knowledge about engineering, like as myself, it's a bit hard to get into all the tiny elements, confusing schematics and invisible flow of electricity.
+Considering making electronics by hands as a play as well as a work of art, not as engineering work, I think understanding the whole process and the process of making itself should be a bit different from the usual way of engineering.
 So I decided to make a document for my handmade electronics, not only for
 others who want to get started, but also for myself not to forget and remember for a long time.
 
-Thus I made a zine for analog synth of oscillator with paper and hand-drawing, which is also the way of super analog.
-I tried to put very subtle but useful information for beginners, such as images of elements and circuit on breadboard not just only with schematics. Because it could be confusing when they start to make without intuitive images if they are outsider of engineering.
-I would like to stress once more that this is for those who are not familiar with electronics. So it doesn't have theoretical explanations for the system and maybe lack of them. It's more a visual guideline.
+Thus I made a zine for an analog synth of the oscillator with paper and hand-drawing, which is also the way of super analog.
+I tried to put very subtle but useful information for beginners, such as images of elements and circuit on breadboard not just only with schematics. Because it could be confusing when they start to make without intuitive images if they are outside of engineering.
+I want to stress once more that this is for those who are not familiar with electronics. So it doesn't have theoretical explanations for the system and maybe lacks them. It's more a visual guideline.
 <br><br>
 
 ![zine, analog synthesizer, oscillator]({{ site.url }}/img/zine01.png){: width="800px"}
@@ -35,9 +35,9 @@ I would like to stress once more that this is for those who are not familiar wit
 
 <hr>
 <br>
-I referred to several online tutorials, the book *Handmade Electronic Music* by Nicolas collins, and the resources of the workshop *Electricity Matters* by Nataliya.
+I referred to several online tutorials, the book *Handmade Electronic Music* by Nicolas Collins, and the resources of the workshop *Electricity Matters* by Nataliya.
 
 <br>
-Go to [Handmade Electronic Art](http://handmade-electronic-art.com/). I will continue to upload tutorials and reference for making handmade electronics on this webpage.
+Go to [Handmade Electronic Art](http://handmade-electronic-art.com/). I will continue to upload tutorials and references for making handmade electronics on this webpage.
 
 <br><br>
